# Oscar_Legal_Practitioners

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  run_docker.ps1
ai-service/: pyproject.toml
ai-service/app/: main.py
ai-service/app/scripts/: seed_vectors.py
ai-service/app/services/: drafting_service.py  research_service.py  vector_store.py
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6cfc59777216_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: auth.py  blog.py  cases.py  clients.py  tasks.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  blog.py  case.py  client.py  task.py  user.py
backend/app/schemas/: case.py  client.py  task.py  token.py  user.py
backend/app/scripts/: seed_db.py
backend/app/services/: crm_service.py  user_service.py
docker/: Dockerfile.ai  Dockerfile.backend  nginx.conf
docs/: DOCUMENTATION_INDEX.md  QUICK_START.md  TESTING_GUIDE.md
docs/planning/: IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  SYSTEM_ARCHITECTURE.md  VISUAL_GUIDE.md
frontend/: README.md  analysis.html  blog.html  cases.html  clients.html  dashboard.html  drafting.html  index.html  research.html  settings.html  signin.html  signup.html
frontend/assets/css/: dashboard.css  main.css
frontend/assets/js/: auth.js  common.js  dashboard.js  main.js
scripts/archive/: setup_local.ps1  setup_local.py
